--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
    </style>
-      <div class="container">
+      <div class="container-fluid px-2">
         <div class="card show-card">
             <img src="<%= listing.image.url %>" class="show-card-image" alt="listingimage...">
             <div class="card-body show-card-body">
@@ -68,7 +68,8 @@
                 <h2>Reviews</h2>
             <div class="row ">
                 <% for(let review of listing.reviews) { %>
-                    <div class="card border-black col-4 p-4 m-4 ">
+                    <div class="card border-black col-12 col-md-6 col-lg-4 p-4 m-2">
+
                         <span><%= review.author.username %></span>
                          <div class="card-body">
                                <p class="starability-result" data-rating="<%= review.rating %>">
