--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 <nav  class="navbar navbar-expand-lg sticky-top  bg-body-tertiary bg-dark border-bottom ">
   <div class="container-fluid">
-    <a class="brand" aria-current="page" href="/listings"><h1>Airbnb</h1></a>
+    <a class="brand" aria-current="page" href="/listings"><h1>Wanderlust</h1></a>
     <button class="navbar-toggler icon" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa-solid fa-bars  navbar-toggler-icon" style="color: #ffffff;"></i>
     </button>
